force-app/main/default/objects/Email_Preferences__mdt/Email_Preferences__mdt.object-meta.xml
<CustomObject>
    <description>Used in MissingEntitlementsEmailAlert class which is designed to send emails everyday for Order items that are shipped but no entitlements were generated.</description>
    <label>Email Preferences</label>
    <pluralLabel>Email Preferences</pluralLabel>
</CustomObject>