force-app/main/default/objects/Email_Preferences__mdt/fields/cc__c.field-meta.xml
<CustomField>
    <fullName>cc__c</fullName>
    <label>cc</label>
    <type>TextArea</type>
</CustomField>