force-app/main/default/objects/Email_Preferences__mdt/fields/Receipient__c.field-meta.xml
<CustomField>
    <fullName>Receipient__c</fullName>
    <label>Receipient</label>
    <type>Email</type>
</CustomField>