force-app/main/default/objects/Email_Preferences__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>From__c</columns>
    <columns>Receipient__c</columns>
    <columns>cc__c</columns>
    <columns>Email_Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>